@@ -19,6 +19,7 @@ Mon Jun 30 2014
    * Fixed macro generation for Poisson responses in mixed models
    * smat option can now apply to more than one level
    * Added check that the IDs and weights are valid for multiple membership models
+   * Removed redundant estIGLS/estMCMC outputs
 
 2. Changes
    * Enabled matching starting values on parameter names (allowing subsets of parameters to be specified)
